--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/pg": "^8.15.2",
     "@vitest/ui": "^3.2.4",
+    "jsonwebtoken": "^9.0.2",
     "supertest": "^7.1.3",
     "vitest": "^3.2.4"
   }
