--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "start": "nuxt start",
+    "start": "nuxt startt",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
