--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "formidable": "^3.5.4",
+    "nodemailer": "^7.0.5",
     "nuxt": "^3.17.3",
     "pg": "^8.16.0",
     "socket.io": "^4.8.1",
